--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
     </div>
     <footer>
 
+        <div class="cols"></div>
+        <div class="cols"></div>
+        <div class="cols"></div>
+        <div class="cols">
+            <input type="email" name="" id="email">
+        </div>
+
     </footer>
 
 </body>
